write three pages

--- a/app/404.html
+++ b/app/404.html
@@ -298,7 +298,7 @@
         </div>
         
         <div id="header__bottom-cover" class="header__bottom-cover">
-            <div class="header__bottom">
+            <div class="header__bottom about__header__bottom">
                 <div class="big-container">
                     <div class="header__bottom__content">
                         <div class="header__bottom__content__left">
@@ -392,109 +392,18 @@
     <main class="main">
     <!-- Main -->
 
-      <section class="contact__start-img">
+      <section class="error__start-img">
          <div class="container">
             <div class="row">
                <div class="col">
-                  <div class="contact__start-img__content">
-                     <h1 class="h1-style">Контакты</h1>
-                     <div class="start-img__breadcrumbs">
-                        <ul class="start-img__breadcrumbs__list">
-                            <li class="start-img__breadcrumbs__list__item"><a href="#">Главная</a></li>
-                            <li class="start-img__breadcrumbs__list__item"><a href="#">Контакты</a></li>
-                        </ul>
-                    </div>
+                  <div class="error__start-img__content">
+                     <h1 class="error-h1-style">404</h1>
+                     <p class="regular-fiveteen">Страница не найдена</p>
                   </div>
                </div>
             </div>
          </div>
       </section>
-
-
-      <section class="information">
-          <div class="small-container">
-            <div class="section-title">
-                <h2 class="section-text__title h2-style">Что-то не доставили?</h2>
-                <p class="seciton-text__description regular-fiveteen">Возникли вопросы по приобретению товаров в нашем интернет-магазине — позвоните или напишите нам.</p>
-            </div>
-            <div class="information__content">
-                <ul class="information__content__list">
-                    <li class="information__content__list__item inf-phone">
-                        <p class="inf-title">Телефон</p>
-                        <span>+375 25 999 99 99</span></br>
-                        <span>+375 25 999 99 99</span>
-                    </li>
-                    <li class="information__content__list__item inf-email">
-                        <p class="inf-title">Email</p>
-                        <a href="#">Shop@bluins.by</a>
-                    </li>
-                    <li class="information__content__list__item inf-time">
-                        <p class="inf-title">Время работы</p>
-                        <span>c <i>8:00</i> до <i>23:00</i> (Ежедневно)</span>
-                    </li>
-                </ul>
-            </div>
-          </div>
-      </section>
-
-      <section class="information">
-        <div class="small-container">
-          <div class="section-title">
-              <h2 class="section-text__title h2-style">Закупка оптом?</h2>
-              <p class="seciton-text__description regular-fiveteen">Хотите сделать оптовый заказ для юридических лиц или у вас возникли вопросы по сотрудничеству?</p>
-          </div>
-          <div class="information__content">
-              <ul class="information__content__list">
-                  <li class="information__content__list__item inf-phone">
-                      <p class="inf-title">Телефон</p>
-                      <span>+375 25 999 99 99</span></br>
-                      <span>+375 25 999 99 99</span>
-                  </li>
-                  <li class="information__content__list__item inf-email">
-                      <p class="inf-title">Email</p>
-                      <a href="#">Shop@bluins.by</a>
-                  </li>
-                  <li class="information__content__list__item inf-time">
-                      <p class="inf-title">Время работы</p>
-                      <span>c <i>9:00</i> до <i>17:00</i> (пн-пт)</span>
-                  </li>
-              </ul>
-          </div>
-        </div>
-    </section>
-
-    <section class="question-form footer-marg">
-        <div class="small-container">
-            <div class="section-title">
-                <h2 class="section-text__title h2-style">Закупка оптом?</h2>
-            </div>
-            <div class="question-form__content">
-                <form class="comment-form" method="POST" action="/">
-                    <p class="comments-notes">Поля помеченные <small>*</small> обязательны для заполнения.</p>
-                    <div class="comments__email-name"> 
-                        <p class="el-input comments-name">
-                            <label class="el-input__label">Имя*</label>
-                            <input class="el-input__field" type="text" placeholder="" required>
-                        </p>
-                        <p class="el-input comments-email">
-                            <label class="el-input__label">Email*</label>
-                            <input class="el-input__field" type="text" placeholder="" required>
-                        </p>
-                        <p class="el-input comments-phone">
-                            <label class="el-input__label">Ваш телефон *</label>
-                            <input class="el-input__field" type="text" placeholder="" required>
-                        </p>
-                    </div>
-                    <p class="el-input comments-textarea">
-                        <label class="el-input__label">Ваше сообщение*</label>
-                        <textarea class="el-input__field" name="comment" cols="45" rows="8" required></textarea>
-                    </p>
-                    <button class="el-form__button">Отправить</button>
-                </form>
-            </div>
-          </div>
-    </section>
-      
 
 
     <!-- Main -->
