--- a/app/answer-questions.html
+++ b/app/answer-questions.html
@@ -392,16 +392,16 @@
     <main class="main">
     <!-- Main -->
 
-      <section class="contact__start-img">
+      <section class="ansQuest__start-img">
          <div class="container">
             <div class="row">
                <div class="col">
-                  <div class="contact__start-img__content">
-                     <h1 class="h1-style">Контакты</h1>
+                  <div class="ansQuest__start-img__content">
+                     <h1 class="h1-style">Ответы на вопросы</h1>
                      <div class="start-img__breadcrumbs">
                         <ul class="start-img__breadcrumbs__list">
                             <li class="start-img__breadcrumbs__list__item"><a href="#">Главная</a></li>
-                            <li class="start-img__breadcrumbs__list__item"><a href="#">Контакты</a></li>
+                            <li class="start-img__breadcrumbs__list__item"><a href="#">Ответы</a></li>
                         </ul>
                     </div>
                   </div>
@@ -411,90 +411,91 @@
       </section>
 
 
-      <section class="information">
-          <div class="small-container">
+      <section class="first-video">
+          <div class="container">
             <div class="section-title">
-                <h2 class="section-text__title h2-style">Что-то не доставили?</h2>
-                <p class="seciton-text__description regular-fiveteen">Возникли вопросы по приобретению товаров в нашем интернет-магазине — позвоните или напишите нам.</p>
+                <h2 class="section-text__title h2-style">Как купить?</h2>
             </div>
-            <div class="information__content">
-                <ul class="information__content__list">
-                    <li class="information__content__list__item inf-phone">
-                        <p class="inf-title">Телефон</p>
-                        <span>+375 25 999 99 99</span></br>
-                        <span>+375 25 999 99 99</span>
-                    </li>
-                    <li class="information__content__list__item inf-email">
-                        <p class="inf-title">Email</p>
-                        <a href="#">Shop@bluins.by</a>
-                    </li>
-                    <li class="information__content__list__item inf-time">
-                        <p class="inf-title">Время работы</p>
-                        <span>c <i>8:00</i> до <i>23:00</i> (Ежедневно)</span>
-                    </li>
-                </ul>
+            <div class="first-video__content">
+               <div class="first-video__content__plane">
+                  <p class="regular-fiveteen">1. <a href="#">Войти</a> или зарегистрироваться</a> в Личном кабинете</p>
+                  <p class="regular-fiveteen">2. Выбрать понравившейся товар в каталоге</p>
+                  <p class="regular-fiveteen">3. Определиться с цветом и количеством товара</p>
+                  <p class="regular-fiveteen">4. Добавить товар в <a href="#">Корзину</a></p>
+                  <p class="regular-fiveteen">5. Кликнуть на кнопку <a href="#">Оформить заказ</a></p>
+                  <p class="regular-fiveteen">6. Заполнить необходимые данные для оформления заказа</p>
+                  <p  class="regular-fiveteen">7. Завершить оформление заказа, нажав кнопку <a href="#">Заказать</a></p>
+               </div>
+                <div class="first-video__content__frame"></div>
             </div>
           </div>
       </section>
-
-      <section class="information">
-        <div class="small-container">
-          <div class="section-title">
-              <h2 class="section-text__title h2-style">Закупка оптом?</h2>
-              <p class="seciton-text__description regular-fiveteen">Хотите сделать оптовый заказ для юридических лиц или у вас возникли вопросы по сотрудничеству?</p>
-          </div>
-          <div class="information__content">
-              <ul class="information__content__list">
-                  <li class="information__content__list__item inf-phone">
-                      <p class="inf-title">Телефон</p>
-                      <span>+375 25 999 99 99</span></br>
-                      <span>+375 25 999 99 99</span>
-                  </li>
-                  <li class="information__content__list__item inf-email">
-                      <p class="inf-title">Email</p>
-                      <a href="#">Shop@bluins.by</a>
-                  </li>
-                  <li class="information__content__list__item inf-time">
-                      <p class="inf-title">Время работы</p>
-                      <span>c <i>9:00</i> до <i>17:00</i> (пн-пт)</span>
-                  </li>
-              </ul>
-          </div>
-        </div>
-    </section>
-
-    <section class="question-form footer-marg">
-        <div class="small-container">
-            <div class="section-title">
-                <h2 class="section-text__title h2-style">Закупка оптом?</h2>
-            </div>
-            <div class="question-form__content">
-                <form class="comment-form" method="POST" action="/">
-                    <p class="comments-notes">Поля помеченные <small>*</small> обязательны для заполнения.</p>
-                    <div class="comments__email-name"> 
-                        <p class="el-input comments-name">
-                            <label class="el-input__label">Имя*</label>
-                            <input class="el-input__field" type="text" placeholder="" required>
-                        </p>
-                        <p class="el-input comments-email">
-                            <label class="el-input__label">Email*</label>
-                            <input class="el-input__field" type="text" placeholder="" required>
-                        </p>
-                        <p class="el-input comments-phone">
-                            <label class="el-input__label">Ваш телефон *</label>
-                            <input class="el-input__field" type="text" placeholder="" required>
-                        </p>
-                    </div>
-                    <p class="el-input comments-textarea">
-                        <label class="el-input__label">Ваше сообщение*</label>
-                        <textarea class="el-input__field" name="comment" cols="45" rows="8" required></textarea>
-                    </p>
-                    <button class="el-form__button">Отправить</button>
-                </form>
-            </div>
-          </div>
-    </section>
       
+
+      <section class="text-block">
+         <div class="small-container">
+            <div class="section-title">
+               <h2 class="section-text__title h2-style">Поставщикам</h2>
+           </div>
+           <div class="text-block__content">
+              <div class="text-block__content__text">
+                 <p class="regular-fiveteen">Мы заинтересованы в сотрудничестве с поставщиками, а также в расширении ассортимента товара. </p>
+                 <p class="regular-fiveteen">Хотите стать нашим партнёрам? </p>
+                 <p class="regular-fiveteen">Присылайте ваши предложения на email <a href="#">Shop@bluins.by</a></p>
+              </div>
+           </div>
+         </div>
+      </section>
+
+
+      <section class="mixed-block">
+         <div class="container">
+            <div class="section-title">
+               <h2 class="section-text__title h2-style">Доставка и оплата</h2>
+            </div>
+            <div class="mixed-block__item">
+               <div class="mixed-block__item__text">
+                  <p class="regular-fiveteen">Способы оплаты:</p>
+                  <p class="regular-fiveteen">1. Наличные Оплата проводится только в <i>белорусских рублях</i>.</p>
+                  <p class="regular-fiveteen">2. Оплата по карте Оплата возможна с помощью банковской карты.</p>
+                  <p class="regular-fiveteen">3. Система «Расчёт» (ЕРИП)</p>
+               </div>
+            </div>
+            <div class="mixed-block__item mixed-block__frame">
+               <div class="mixed-block__item__frame"></div>
+               <div class="mixed-block__item__plane">
+                  <p class="regular-fiveteen">Пункт «Система «Расчёт» (ЕРИП)</p>
+                  <p class="regular-fiveteen">1. Интернет-магазины/сервисы</p>
+                  <p class="regular-fiveteen">2. A-Z Латинские домены</p>
+                  <p class="regular-fiveteen">3. «B»</p>
+                  <p class="regular-fiveteen">4. Blueins.by</p>
+                  <p class="regular-fiveteen">5. Для оплаты «Товара» ввести номер заказа (выдаёт менеджер после согласования заказа)</p>
+                  <p class="regular-fiveteen">6. Проверить корректность информации</p>
+                  <p class="regular-fiveteen">7. Совершить платёж</p>
+               </div>
+            </div>
+            <div class="mixed-block__item">
+               <div class="mixed-block__item__text">
+                  <p class="regular-fiveteen">Если осуществляете платёж в кассе банка, <i>обязательно сообщите кассиру</i> о необходимости проведения платежа через систему «Расчёт» (ЕРИП).</p>
+                  <p class="regular-fiveteen"><i>Доставка:</i> Доставка по городу Минску производиться <i>ЕЖЕДНЕВНО</i>. Время работы доставки – <i>8:00-23:00</i>. Доставка курьером осуществляется <i>БЕСПЛАТНО</i> в пределах МКАД, включая район Уручье.</p>
+               </div>
+            </div>
+         </div>
+      </section>
+
+
+      <section class="text-block">
+         <div class="small-container">
+            <div class="section-title">
+               <h2 class="section-text__title h2-style">Возврат</h2>
+           </div>
+           <div class="text-block__content">
+              <div class="text-block__content__text">
+                 <p class="regular-fiveteen">Возврату или обмену принимается товар, который <i>не был в употреблении</i>, <i>не стиран</i>, сохранены его <i>товарный вид</i> и <i>упаковка</i>. Согласно ст. 28 Закон РБ «О защите прав потребителей», Вы вправе в течение 14 (четырнадца-ти) календарных дней с момента получения заказа, возвратить или обменять товар. <i>Возврат</i> денежных средств осуществляется на <i>банковскую карту</i>.</p>
+              </div>
+           </div>
+         </div>
+      </section>
 
 
     <!-- Main -->
