--- a/app/index.html
+++ b/app/index.html
@@ -277,9 +277,9 @@
                         </nav>    
                         <nav class="site-menu">       
                             <ul class="site-menu__links">
-                                <li><a class="light-thirteen" href="#">Оплата и доставка</a></li>
-                                <li><a class="light-thirteen" href="#">Как купить?</a></li>
-                                <li><a class="light-thirteen" href="#">Поддержка</a></li>
+                                <li><a class="light-thirteen" href="answer-questions.html">Оплата и доставка</a></li>
+                                <li><a class="light-thirteen" href="answer-questions.html">Как купить?</a></li>
+                                <li><a class="light-thirteen" href="answer-questions.html">Поддержка</a></li>
                             </ul>
                         </nav>                  
                     </div>
@@ -719,7 +719,7 @@
             </div>
         </section>
 
-        <section class="about">
+        <section class="about footer-marg">
             <div class="container">
                 <div class="section-title">
                     <h2 class="section-text__title h2-style">Не много о Bluins</h2>
