--- a/app/product-single.html
+++ b/app/product-single.html
@@ -611,7 +611,7 @@
             </div>
         </section> 
 
-        <section class="same-product">
+        <section class="same-product footer-marg">
             <div class="container">
                 <div class="section-product__title">
                     <h2 class="h2-style">Похожие товары</h2>
