--- a/app/product.html
+++ b/app/product.html
@@ -387,7 +387,18 @@
     <!-- Header -->
     </header>
 
-
+    <!-- Filter -->
+    <div id="prod-filter-menu" class="prod-filter">
+        <div class="prod-filter__top">
+            <h3 class="h3-style">Фильтры</h3>
+            <button id="close-button-prod-filter" class="prod-filter__close-button">Готово</button>
+        </div>
+        <div class="prod-filter__bottom">
+            
+        </div>
+    </div>
+    <div id="prod-filter-overlay" class="prod-filter-overlay"></div>
+    <!-- Filter -->
 
     <main class="main">
     <!-- Main -->
@@ -419,7 +430,7 @@
                <div class="filters__right">
                   <ul class="filters__right__list">
                      <li class="filters__right__list__item">
-                        <button class="filter-button">
+                        <button id="prod-filter_open-menu" class="filter-button">
                            <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33"><defs><style>.a{fill:#17191a;}.b{fill:none;}</style></defs><path class="a" d="M15.288,9.949a.465.465,0,0,0-.42-.266H.464a.465.465,0,0,0-.359.76l5.537,6.715v6.192a.465.465,0,0,0,.671.416l3.111-1.542a.465.465,0,0,0,.258-.416l.006-4.651,5.537-6.716A.464.464,0,0,0,15.288,9.949ZM8.866,16.7a.465.465,0,0,0-.106.295l-.006,4.529L6.572,22.6v-5.61a.464.464,0,0,0-.106-.3L1.45,10.612H13.882Z" transform="translate(9 -0.683)"/><rect class="b" width="33" height="33"/></svg>
                            <span>Фильтер</span>
                         </button>
@@ -777,7 +788,7 @@
                 </li>
                <!-- Big Products Item -->
             </ul>
-            <div class="paggination">
+            <div class="paggination footer-marg">
                 <a class="page-prev page-arrow prev-no">
                     <svg xmlns="http://www.w3.org/2000/svg" width="9.534" height="17.316" viewBox="0 0 9.534 17.316"><g transform="translate(63.647 17.316) rotate(180)"><path d="M63.394,8.04,55.607.256a.874.874,0,0,0-1.238,1.235l7.169,7.167L54.37,15.824a.875.875,0,1,0,1.238,1.236l7.787-7.784A.882.882,0,0,0,63.394,8.04Z"/></g></svg>
                 </a>
