--- a/app/product.html
+++ b/app/product.html
@@ -394,7 +394,72 @@
             <button id="close-button-prod-filter" class="prod-filter__close-button">Готово</button>
         </div>
         <div class="prod-filter__bottom">
-            
+            <div class="prod-filter__customs">
+                <ul class="customs__list">
+                    <li class="customs__list__item">
+                        <div class="customs__list__item__title">
+                            <h6 class="groupe-cust-title">Фильтер по категории</h6>
+                            <span></span>
+                        </div>
+                        <div class="item__nav">
+                            <ul>
+                                <li><a href="#">Пледы</a></li>
+                                <li><a href="#">Одеяла</a></li>
+                                <li><a href="#">Подушки</a></li>
+                                <li><a href="#">Покрывала</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="customs__list__item">
+                        <div class="customs__list__item__title">
+                            <h6 class="groupe-cust-title">Фильтер по категории</h6>
+                            <span></span>
+                        </div>
+                        <div class="item__nav">
+                            <ul>
+                                <li><a href="#">Лён</a></li>
+                                <li><a href="#">Синтетика</a></li>
+                                <li><a href="#">Ткань</a></li>
+                                <li><a href="#">Поддержка</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="customs__list__item">
+                        <div class="customs__list__item__title">
+                            <h6 class="groupe-cust-title">Фильтер по категории</h6>
+                            <span></span>
+                        </div>
+                        <div class="item__nav">
+                            <ul class="customs__cl">
+                                <li class="customs__cl__item"><a href="#">
+                                    <span class="cl-circle red"></span>
+                                </a></li>
+                                <li class="customs__cl__item"><a href="#">
+                                    <span class="cl-circle black"></span>
+                                </a></li>
+                                <li class="customs__cl__item"><a href="#">
+                                    <span class="cl-circle blue"></span>
+                                </a></li>
+                                <li class="customs__cl__item"><a href="#">
+                                    <span class="cl-circle gold"></span>
+                                </a></li>
+                                <li class="customs__cl__item"><a href="#">
+                                    <span class="cl-circle grey"></span>
+                                </a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="customs__list__item">
+                        <div class="customs__list__item__title">
+                            <h6 class="groupe-cust-title">Фильтер по категории</h6>
+                            <span></span>
+                        </div>
+                        <div class="item__nav">
+                            
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
     <div id="prod-filter-overlay" class="prod-filter-overlay"></div>
