--- a/app/user-account.html
+++ b/app/user-account.html
@@ -423,39 +423,29 @@
                </div>
                <div class="user__content__information">
                   <div class="user-container">
-                     <form class="user__form" method="POST" action="/">
-                        <div class="user__form__name-sur"> 
-                           <p class="el-input user-name">
-                                 <label class="el-input__label">Имя*</label>
-                                 <input class="el-input__field" type="text" placeholder="" required>
-                           </p>
-                           <p class="el-input user-surname">
-                                 <label class="el-input__label">Фамилия*</label>
-                                 <input class="el-input__field" type="text" placeholder="" required>
-                           </p>
-                        </div>
+                     <form class="user__form__email" method="POST" action="/">
+                        <p class="regular-fiveteen">Адрес электронной почты:</p>
                         <p class="el-input">
-                           <label class="el-input__label">Логин*</label>
-                           <input class="el-input__field" type="text" placeholder="" required>
+                            <label class="el-input__label">Город*</label>
+                            <input class="el-input__field" type="text" placeholder="" required>
                         </p>
-                        <p class="el-input">
-                           <label class="el-input__label">Город*</label>
-                           <input class="el-input__field" type="text" placeholder="" required>
-                        </p>
-                        <p class="el-input">
-                           <label class="el-input__label">Адрес доставки*</label>
-                           <input class="el-input__field" type="text" placeholder="" required>
-                        </p>
-                        <p class="el-input">
-                           <label class="el-input__label">Email*</label>
-                           <input class="el-input__field" type="text" placeholder="" required>
-                        </p>
-                        <p class="el-input">
-                           <label class="el-input__label">Телефон *</label>
-                           <input class="el-input__field" type="text" placeholder="" required>
-                        </p>
-                        <button class="el-form__button">Сохранить</button>
                      </form>
+                     <form class="user__form__password" method="POST" action="/">
+                        <p class="regular-fiveteen">Адрес электронной почты:</p>
+                        <p class="el-input">
+                            <label class="el-input__label">Введите текущий пароль *</label>
+                            <input class="el-input__field" type="password" placeholder="" required>
+                         </p>
+                         <p class="el-input">
+                            <label class="el-input__label">Введите новый пароль *</label>
+                            <input class="el-input__field" type="password" placeholder="" required>
+                         </p>
+                         <p class="el-input">
+                            <label class="el-input__label">Подтвердите пароль *</label>
+                            <input class="el-input__field" type="password" placeholder="" required>
+                         </p>
+                         <button class="el-form__button">Изменить</button>
+                    </form>
                   </div>
                </div>
             </div>
