--- a/app/user-delete.html
+++ b/app/user-delete.html
@@ -423,8 +423,9 @@
                </div>
                <div class="user__content__information">
                   <div class="user-container">
-                     <form class="user__form" method="POST" action="/">
-                        <button class="el-form__button">Сохранить</button>
+                     <form class="user__form__delete" method="POST" action="/">
+                        <p class="regular-fiveteen">Внимание: Все данные будут удалены безвозвратно!</p>
+                        <button class="el-form__button user__form__delete__but">Удалить</button>
                      </form>
                   </div>
                </div>
