--- a/app/user-notification.html
+++ b/app/user-notification.html
@@ -423,9 +423,26 @@
                </div>
                <div class="user__content__information">
                   <div class="user-container">
-                     
-
-
+                     <form class="user__form__checkboxs" method="POST" action="/">
+                        <p class="regular-feveteen">Хочу получать:</p>
+                        <p class="el-checkbox">
+                            <input class="el-checkbox__box" type="checkbox" placeholder="" required>
+                            <label class="el-checkbox__label">Blueins – молодая и амбициозная компания. В наших силах сделать Ваш отдых и сон изумительным. Мы только за натуральные природные материалы. Ведь «Вернуться к истокам» для нас не просто слова, а что-то намного больше.</label>
+                        </p>
+                        <p class="el-checkbox">
+                            <input class="el-checkbox__box" type="checkbox" placeholder="" required>
+                            <label class="el-checkbox__label">Blueins – молодая и амбициозная компания. В наших силах сделать Ваш отдых и сон изумительным. Мы только за натуральные природные материалы. Ведь «Вернуться к истокам» для нас не просто слова, а что-то намного больше.</label>
+                        </p>
+                        <p class="el-checkbox">
+                            <input class="el-checkbox__box" type="checkbox" placeholder="" required>
+                            <label class="el-checkbox__label">Blueins – молодая и амбициозная компания. В наших силах сделать Ваш отдых и сон изумительным. Мы только за натуральные природные материалы. Ведь «Вернуться к истокам» для нас не просто слова, а что-то намного больше.</label>
+                        </p>
+                        <p class="el-checkbox">
+                            <input class="el-checkbox__box" type="checkbox" placeholder="" required>
+                            <label class="el-checkbox__label">Blueins – молодая и амбициозная компания. В наших силах сделать Ваш отдых и сон изумительным. Мы только за натуральные природные материалы. Ведь «Вернуться к истокам» для нас не просто слова, а что-то намного больше.</label>
+                        </p>
+                        <button class="el-form__button">Сохранить</button>
+                    </form>
                   </div>
                </div>
             </div>
