--- a/app/cart.html
+++ b/app/cart.html
@@ -262,6 +262,12 @@
     <div id="cart-overlay" class="cart-overlay"></div>
     <!-- Cart -->
 
+    <!-- Go to tooop! -->
+    <button id="go-to-top" class="go-to-top hidden">
+        <span></span>
+    </button>
+    <!-- Go to tooop! -->
+
     <header class="header">
     <!-- Header -->
         <div class="header__top">
@@ -372,7 +378,7 @@
                                         </button>
                                     </li>
                                     <li>
-                                        <a href="#" class="like-icon">
+                                        <a href="../like.html" class="like-icon">
                                             <!-- <img src="img/Icon/Like.svg" width="45px" height="45px" alt="Понравившиеся"> -->
                                             <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 45 45"><g transform="translate(11 -16.534)"><g transform="translate(0 28.534)"><path d="M11.295,48.606c-.476-.412-.718-.646-3.262-2.809C3.2,41.683,0,38.966,0,35a6.158,6.158,0,0,1,6-6.464,5.975,5.975,0,0,1,5.294,3.574,5.975,5.975,0,0,1,5.294-3.574,6.158,6.158,0,0,1,6,6.464c0,3.967-3.2,6.685-8.033,10.8C12,47.97,11.792,48.175,11.295,48.606ZM6,29.858c-2.666,0-4.677,2.21-4.677,5.141,0,3.356,3.01,5.915,7.567,9.79.772.657,1.567,1.332,2.4,2.06.837-.728,1.632-1.4,2.4-2.06,4.557-3.875,7.567-6.435,7.567-9.79,0-2.931-2.011-5.141-4.677-5.141-2.407,0-4.1,2.158-4.657,4.147v0l-1.275,0h0C10.169,32.248,8.585,29.858,6,29.858Z" transform="translate(0 -28.534)" fill="#fff"/></g></g><rect width="45" height="45" fill="none"/></svg>
                                         </a>
@@ -536,24 +542,26 @@
                                         <span>Минск</span>
                                     </li>
                                     <li class="cart__menu__middle__list__item">
-                                        <div class="cart__item-slide">
+                                        <div id="cart__item-slide" class="cart__item-slide">
                                             <p>Изменить адрес</p>
-                                            <span></span>
+                                            <span class="delete-item close"></span>
                                         </div>
-                                        <ul class="cart__item-forms">
-                                            <li>
-                                                <p class="el-input">
-                                                    <label class="el-input__label">Город*</label>
-                                                    <input class="el-input__field" type="text" placeholder="" required>
-                                                </p>
-                                            </li>
-                                            <li>
-                                                <p class="el-input">
-                                                    <label class="el-input__label">Адрес доставки*</label>
-                                                    <input class="el-input__field" type="text" placeholder="" required>
-                                                </p>
-                                            </li>
-                                        </ul>
+                                        <div id="cart__item-forms" class="cart__item-forms__cover">
+                                            <ul class="cart__item-forms">
+                                                <li>
+                                                    <p class="el-input">
+                                                        <label class="el-input__label">Город*</label>
+                                                        <input class="el-input__field" type="text" placeholder="" required>
+                                                    </p>
+                                                </li>
+                                                <li>
+                                                    <p class="el-input">
+                                                        <label class="el-input__label">Адрес доставки*</label>
+                                                        <input class="el-input__field" type="text" placeholder="" required>
+                                                    </p>
+                                                </li>
+                                            </ul>
+                                        </div>
                                     </li>
                                 </ul>
                             </td>
