--- a/app/product.html
+++ b/app/product.html
@@ -262,6 +262,12 @@
     <div id="cart-overlay" class="cart-overlay"></div>
     <!-- Cart -->
 
+    <!-- Go to tooop! -->
+    <button id="go-to-top" class="go-to-top hidden">
+        <span></span>
+    </button>
+    <!-- Go to tooop! -->
+
     <header class="header">
     <!-- Header -->
         <div class="header__top">
